# pyobench

./: README.md  pyproject.toml
benchmarks/: __init__.py  benchs.py
src/pyobench/: __init__.py  __main__.py  _graphs.py  _history.py  _pipeline.py  _registery.py
tests/: test_benchs.py
