[project]
    dependencies    = [
    "framelib",
    "plotly[express]>=6.5.2",
    "polars>=1.37.1",
    "pyochain>=0.9.2",
    "typer>=0.21.1",
]
    description     = "Benchmark tools for the pyochain project"
    name            = "pyobench"
    readme          = "README.md"
    requires-python = ">=3.13"
    version         = "0.1.0"
[tool.ruff]
    lint.external = ["DOC"]
    lint.ignore = [
        "C417",
        "COM812",
        "COM812",
        "D401",
        "E501",
        "FIX002",
        "PLC0415",
        "PLR2004",
        "PYI021",
        "S101",
        "S608",
        "SLF001",
        "T201",
        "TC003",
        "TC006",
        "TD002",
        "TD003",
        "TID252",
    ]

    lint.select = ["ALL"]
    [tool.ruff.format]
        docstring-code-format = true
    [tool.ruff.lint.pydocstyle]
        convention = "google"

[tool.pydoclint]
    arg-type-hints-in-docstring                   = true
    arg-type-hints-in-signature                   = true
    check-class-attributes                        = true
    check-raises                                  = true
    check-return-types                            = true
    check-yield                                   = true
    require-arg-section                           = true
    require-return-section                        = true
    require-return-section-when-returning-nothing = false
    skip-checking-short-docstrings                = true
    style                                         = "google"

[tool.uv.sources]
framelib = { git = "https://github.com/OutSquareCapital/framelib.git" }
[build-system]
    build-backend = "uv_build"
    requires      = ["uv_build>=0.8.15,<0.9.0"]

[dependency-groups]
dev = [
    "plotly-stubs>=0.1.2",
    "ruff>=0.14.13",
]
