[project]
    dependencies = [
        "framelib",
        "plotly[express]>=6.5.2",
        "polars>=1.37.1",
        "pyochain>=0.9.2",
        "typer>=0.21.1",
    ]
    description = "Benchmark tools for the pyochain project"
    name = "pyobench"
    readme = "README.md"
    requires-python = ">=3.13"
    version = "0.1.0"

    [project.scripts]
        pyobench = "pyobench.__main__:app"
[tool.ruff]
    lint.ignore = [
        "A001",
        "A004",
        "C417",
        "COM812",
        "COM812",
        "CPY001",
        "D401",
        "E501",
        "FIX002",
        "PD003",
        "PLC0415",
        "PLC1901",
        "PLC2801",
        "PLR0904",
        "PLR2004",
        "S101",
        "S102",
        "S404",
        "S608",
        "SLF001",
        "T201",
        "T203",
        "TC003",
        "TC006",
        "TD002",
        "TD003",
        "TID252",
    ]
    lint.select = ["ALL"]
    preview = true
    [tool.ruff.format]
        docstring-code-format = true
    [tool.ruff.lint.pydocstyle]
        convention = "google"
    [tool.ruff.lint.per-file-ignores]
        "src/pql/sql/_code_gen/*.py" = [
            "A002",
            "ANN401",
            "FBT001",
            "FBT002",
            "PLR0913",
            "PLW1641",
        ]
        "t.py" = ["ANN201", "D100", "D101", "D103"]
        "tests/*" = ["D100", "D101", "D102", "D103", "D104", "DTZ001", "FBT001"]
    [tool.ruff.lint.isort]
        combine-as-imports = true

[tool.pydoclint]
    arg-type-hints-in-docstring                   = true
    arg-type-hints-in-signature                   = true
    check-class-attributes                        = true
    check-raises                                  = true
    check-return-types                            = true
    check-yield                                   = true
    require-arg-section                           = true
    require-return-section                        = true
    require-return-section-when-returning-nothing = false
    skip-checking-short-docstrings                = true
    style                                         = "google"

[tool.uv.sources]
    framelib = { git = "https://github.com/OutSquareCapital/framelib.git" }
[build-system]
    build-backend = "uv_build"
    requires      = ["uv_build>=0.8.15,<0.9.0"]

[dependency-groups]
    dev = [
        "plotly-stubs>=0.1.2",
        "pydoclint>=0.8.3",
        "pytest>=9.0.2",
        "ruff>=0.14.13",
    ]
